--- a/Laba1/Laba1/Properties/launchSettings.json
+++ b/Laba1/Laba1/Properties/launchSettings.json
@@ -13,6 +13,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
+        "SendGrid": "*",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       }
     },
