--- a/Laba1/Services/Services.csproj
+++ b/Laba1/Services/Services.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="SendGrid" Version="9.24.4" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
