--- a/Laba1/Laba1/Laba1.csproj
+++ b/Laba1/Laba1/Laba1.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.9" />
     <PackageReference Include="SendGrid" Version="9.24.4" />
     <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
